# chess-game

./: .gitignore  README.md  README_engine.md  gui.py  main.py  py_engine.py  requirements.txt
GUI/: game.py  gui.py  image_manager.py
back_end/: data_base.py  users.json
engine/: CMakeLists.txt  engine.cpp  engine_interface.py  test_engine.py
engine/board/: chess.cpp  chess.h  rules.cpp  rules.h
engine/configs/: README.md
engine/include/: engine.h
engine/src/: engine.cpp
engine/src/board/: README.md  board.cpp  board.h
engine/src/config/: README.md
engine/src/evaluate/: README.md  evaluate.cpp  evaluate.h
engine/src/search/: README.md  search.cpp  search.h
engine/training/: README.md
engine/weights/: README.md
old/py_engine/: mtx_engine.py  py_engine.py
